# nors-os

./: README.md  build_iso.sh  packages.list  setup_wine_bottles.sh
.github/workflows/: build.yml
KDE_Theme/NorsDream/: colors
NorsAD/: ad_mapper.py
NorsAcademy/: app.py
NorsAuditor/: nors_auditor.py
NorsC2/: server.py
NorsCloud/: cloud_audit.py
NorsCrypto/: crypto_suite.py
NorsDefender/: CMakeLists.txt  nors_defender.cpp
NorsDeobfuscator/: js_ps_deobfuscator.py
NorsForensics/: live_response.sh
NorsFuzzer/: web_fuzzer.py
NorsHardware/: iot_interact.py
NorsInstaller/: backend_install.sh  install-nors.desktop  nors_installer_ui.py
NorsLabs/: nors_labs.py
NorsMonitor/: CMakeLists.txt  nors_monitor.cpp
NorsOSINT/: recon_spider.py
NorsPayloadObfuscator/: obfuscator.py
NorsPhish/: phish_simulator.py
NorsReconAutomator/: recon_pipeline.sh
NorsReporter/: nors_reporter.py
NorsSandbox/: sandbox_runner.py
NorsScanner/: nors_scanner.py
NorsStego/: stego_forge.py
NorsStress/: stress_test.py
NorsStudio/: nors_studio.py
NorsTrigger/: nors_trigger.py
NorsVPN/: nors_vpn.py
NorsWifi/: wifi_strike.py
NorsZeroTrust/: segmentation.sh
Scripts/: nors_harden.sh
WebDashboard/: app.py
